crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/051.cypher
CREATE (n:Backdoor {admin: true}); MATCH (m) RETURN m
